# openapiv2/apidocs.swagger.json
@@ -432,6 +432,57 @@
         ]
       }
     },
+    "/api/v1/datasetobjects/get": {
+      "post": {
+        "operationId": "DatasetService_GetDatasetObjects",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetDatasetObjectsResponse"
+            }
+          },
+          "403": {
+            "description": "Returned when the user does not have permission to access the resource.",
+            "schema": {}
+          },
+          "404": {
+            "description": "Returned when the resource does not exist.",
+            "schema": {
+              "type": "string",
+              "format": "string"
+            }
+          },
+          "418": {
+            "description": "I'm a teapot.",
+            "schema": {}
+          },
+          "500": {
+            "description": "Server error",
+            "schema": {}
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/googlerpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1GetDatasetObjectsRequest"
+            }
+          }
+        ],
+        "tags": [
+          "DatasetService"
+        ]
+      }
+    },
     "/api/v1/datasetversion/create": {
       "post": {
         "summary": "ReleaseDatasetVersion Release a new dataset version",
@@ -2866,6 +2917,9 @@
         },
         "pageRequest": {
           "$ref": "#/definitions/v1PageRequest"
+        },
+        "labelFilter": {
+          "$ref": "#/definitions/modelsv1Label"
         }
       }
     },
@@ -2876,6 +2930,28 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/v1ObjectGroup"
+          }
+        }
+      }
+    },
+    "v1GetDatasetObjectsRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "pageRequest": {
+          "$ref": "#/definitions/v1PageRequest"
+        }
+      }
+    },
+    "v1GetDatasetObjectsResponse": {
+      "type": "object",
+      "properties": {
+        "objects": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1Object"
           }
         }
       }
